[package]
name = "resava"
version = "1.0.2"
authors = ["BojanStipic <bojanstipic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive", "wrap_help"] }
thiserror = "2.0.12"
regex = "1.11.1"
strsim = "0.11.1"
ignore = "0.4.23"
rayon = "1.10.0"
